--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -76,7 +76,10 @@
 	}
 
 	.content {
-		
+		&--box{
+			background: #fff;
+			padding: 20px;
+		}
 		&--add-blog {
 			display: flex;
 			flex-direction: column;
@@ -86,8 +89,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 20px;
-				background: #fff;
-				padding: 20px;
+				
 
 				>div {
 					display: flex;
@@ -119,12 +121,23 @@
 				}
 			}
 			&__media{
-				padding: 20px;
-				background: #fff;
 				display: grid;
 				grid-template-columns: 1fr;
 				grid-template-rows: auto;
 				gap: 10px;
+			}
+			&__pdf{
+				display: flex;
+				align-items: center;
+				gap:40px;
+				background: #E6ECF5;
+				padding: 10px 20px;
+				margin-top: 15px;
+				.chk{
+					display: flex;
+					align-items: center;
+					gap:30px;
+				}
 			}
 			&__images{
 					display: flex;
@@ -142,28 +155,47 @@
 						
 						td{
 							&:nth-child(2){
-								width: 100px;
+								width: 80px;
 								text-align: right;
 								position: relative;
+								@include mx.hover{
+									&::before{
+										@include mx.icon_close_circle('004098');
+									}
+								}
 								&::before{
+									pointer-events: none;
 									content:"";
-									width: 20px;
-									height: 20px;
+									width: 16px;
+									height: 16px;
 									@include mx.icon_close_circle('707070');
 									position: absolute;
 									left: 0;
-									top:0;
+									top:50%;
+									transform: translateY(-50%);
 									z-index: 2;
 								}
 							}
 						}
+					
 						input[type="button"]{
+							cursor: pointer;
 							color: #004098;
 							@include mx.fs(14);
 							border: none;
 							background: none;
+							width: 100%!important;
 						}
 					}
+			}
+			&__post{
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				grid-template-rows: 1fr;
+				gap: 10px;
+				icon{
+					color: #ccc;
+				}
 			}
 		}
 	}
