サイドバー修正

--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -1,7 +1,21 @@
 @use "_mixin.scss" as mx;
 
 #footer {
-	display: none;
+	height: 100px;
+	padding: 0;
+	margin: 0;
+	p{
+		height: 100%;
+		display: block;
+		width: 250px;
+		background: #004098;
+		display: flex;
+		align-items: flex-end;
+		@include mx.fs(11);
+		color: #fff;
+		padding: 10px;
+		text-align: left;
+	}
 }
 
 #wrap {
@@ -15,14 +29,11 @@
 		grid-template-columns: 250px 1fr;
 		grid-template-rows: 1fr;
 
-	
-
-
 		#view {
 			margin: 0;
 			float: none;
 			width: 100%;
-			
+			min-height: 100vh;
 			.site-contents {
 				display: grid;
 				grid-template-columns: 1fr 250px;
