--- a/admin/css/style_02.css
+++ b/admin/css/style_02.css
@@ -1802,7 +1802,25 @@ label {
 }
 
 #footer {
-  display: none;
+  height: 100px;
+  padding: 0;
+  margin: 0;
+}
+#footer p {
+  height: 100%;
+  display: block;
+  width: 250px;
+  background: #004098;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  font-size: 0.6875rem;
+  color: #fff;
+  padding: 10px;
+  text-align: left;
 }
 
 #wrap {
@@ -1832,6 +1850,7 @@ label {
   margin: 0;
   float: none;
   width: 100%;
+  min-height: 100vh;
 }
 #page .site-main #view .site-contents {
   display: -ms-grid;
@@ -2083,7 +2102,6 @@ label {
   width: 100%;
   float: none;
   background: #004098;
-  padding-bottom: 200px;
   position: relative;
 }
 #page .site-main #navi #navi__inner {
