--- a/admin/scss/_login.scss
+++ b/admin/scss/_login.scss
@@ -1,11 +1,16 @@
 @use "_mixin.scss" as mx;
 
+#login{
+	#footer{
+		display: none;
+	}
+}
 #admin_login {
 	#header{
 		display: none;
 	}
 	.main {
-		min-height: calc(100vh - 105px);
+		min-height: calc(100vh);
 			display: flex;
 	align-items: center;
 	justify-content: center;
