--- a/admin/css/style_02.css
+++ b/admin/css/style_02.css
@@ -1806,11 +1806,15 @@ label {
 }
 
 #footer {
-  height: 100px;
+  height: 0;
   padding: 0;
   margin: 0;
+  position: relative;
+  z-index: 2;
 }
 #footer p {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
   height: 100%;
   display: block;
   width: 250px;
