--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -1,10 +1,13 @@
 @use "_mixin.scss" as mx;
 
 #footer {
-	height: 100px;
+	height: 0;
 	padding: 0;
 	margin: 0;
+	position: relative;
+	z-index: 2;
 	p{
+		transform: translateY(-20px);
 		height: 100%;
 		display: block;
 		width: 250px;
