--- a/admin/scss/_footer.scss
+++ b/admin/scss/_footer.scss
@@ -1,1 +1,21 @@
 @use "_mixin.scss" as mx;
+#Copyright {
+	height: 100px;
+	padding: 0;
+	margin: 0;
+	position: relative;
+	z-index: 2;
+    
+	p {
+		height: 100%;
+		display: block;
+		width: 250px;
+		background: #004098;
+		display: flex;
+		align-items: flex-end;
+		@include mx.fs(11);
+		color: #fff;
+		padding: 10px;
+		text-align: left;
+	}
+}
