--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -1,25 +1,6 @@
 @use "_mixin.scss" as mx;
 
-#footer {
-	height: 0;
-	padding: 0;
-	margin: 0;
-	position: relative;
-	z-index: 2;
-	p{
-		transform: translateY(-20px);
-		height: 100%;
-		display: block;
-		width: 250px;
-		background: #004098;
-		display: flex;
-		align-items: flex-end;
-		@include mx.fs(11);
-		color: #fff;
-		padding: 10px;
-		text-align: left;
-	}
-}
+
 
 #wrap {
 	width: 100%;
@@ -30,39 +11,42 @@
 	.site-main {
 		display: grid;
 		grid-template-columns: 250px 1fr;
-		grid-template-rows: 1fr;
+		grid-template-rows: auto;
 
 		#view {
 			margin: 0;
 			float: none;
 			width: 100%;
 			min-height: 100vh;
+
 			.site-contents {
 				display: grid;
 				grid-template-columns: 1fr 250px;
 				grid-template-rows: auto 1fr;
+
 				h2 {
 					grid-column: 1;
 					grid-row: 1;
 					background: none;
-					padding: 25px 30px 10px;
+					padding: 40px 30px 20px;
 					border-bottom: none;
 					color: #009B63;
-					@include mx.fs(24);
+					@include mx.fs(28);
 					display: flex;
 					align-items: center;
 					line-height: 1.5;
+
 					.icon {
 						flex-shrink: 0;
 						font-size: 1em;
-						
+
 					}
 				}
 
 				h3 {
 					@include mx.fs(24);
 					color: #004098;
-					
+
 				}
 
 				.postinfo {
@@ -72,7 +56,8 @@
 					float: none;
 					width: 100%;
 					padding: 0 40px 40px;
-					span{
+
+					span {
 						padding: 0;
 					}
 				}
@@ -83,6 +68,29 @@
 					float: none;
 					width: 100%;
 					background: #D4EBE3;
+					color: #888888;
+					button{
+						color: #888888;
+						padding: 10px 1em;
+					}
+					.genre1{
+						>ul{
+							>li{
+								
+								>label{
+									padding: 5px 0.5em 5px 1em;
+								}
+								>ul{
+									background: rgba(240,240,240,0.5);
+									li{
+										>label{
+											padding: 3px 0.5em 3px 2em;
+										}
+									}
+								}
+							}
+						}
+					}
 				}
 			}
 
@@ -90,10 +98,12 @@
 	}
 
 	.content {
-		&--box{
+		
+		&--box {
 			background: #fff;
 			padding: 20px;
 		}
+
 		&--add-blog {
 			display: flex;
 			flex-direction: column;
@@ -103,7 +113,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 20px;
-				
+
 
 				>div {
 					display: flex;
@@ -120,95 +130,209 @@
 				}
 			}
 
-			&__text{
-				>*{
-					width: 100%!important;
+			&__text {
+				>* {
+					width: 100% !important;
 					background: #fff;
-					#report_note{
+
+					#report_note {
 						display: none;
 					}
-					.nicEdit-main{
-						padding: 10px;;
-						margin: 0!important;
-						width: 100%!important;
+
+					.nicEdit-main {
+						padding: 10px;
+						;
+						margin: 0 !important;
+						width: 100% !important;
 					}
 				}
 			}
-			&__media{
+
+			&__media {
 				display: grid;
 				grid-template-columns: 1fr;
 				grid-template-rows: auto;
-				gap: 10px;
+				gap: 20px;
 			}
-			&__pdf{
+
+			&__pdf {
 				display: flex;
 				align-items: center;
-				gap:40px;
+				gap: 40px;
 				background: #E6ECF5;
 				padding: 10px 20px;
-				margin-top: 15px;
-				.chk{
+				margin-top: 0px;
+
+				.chk {
 					display: flex;
 					align-items: center;
-					gap:30px;
+					gap: 30px;
 				}
 			}
-			&__images{
-					display: flex;
-					align-items: center;
-					gap:4px 20px;
-					@include mx.max_w(1080){
-						flex-wrap: wrap;
-					}
-					>h4{
-						white-space: nowrap;
-					}
-					table{
-						width: 100%;
-						margin: 0;
-						
-						td{
-							&:nth-child(2){
-								width: 80px;
-								text-align: right;
-								position: relative;
-								@include mx.hover{
-									&::before{
-										@include mx.icon_close_circle('004098');
-									}
-								}
-								&::before{
-									pointer-events: none;
-									content:"";
-									width: 16px;
-									height: 16px;
-									@include mx.icon_close_circle('707070');
-									position: absolute;
-									left: 0;
-									top:50%;
-									transform: translateY(-50%);
-									z-index: 2;
+
+			&__images {
+				display: flex;
+				align-items: center;
+				gap: 4px 20px;
+
+				@include mx.max_w(1080) {
+					flex-wrap: wrap;
+				}
+
+				>h4 {
+					white-space: nowrap;
+				}
+
+				table {
+					width: 100%;
+					margin: 0;
+
+					td {
+						&:nth-child(2) {
+							width: 80px;
+							text-align: right;
+							position: relative;
+
+							@include mx.hover {
+								&::before {
+									@include mx.icon_close_circle('004098');
 								}
 							}
-						}
-					
-						input[type="button"]{
-							cursor: pointer;
-							color: #004098;
-							@include mx.fs(14);
-							border: none;
-							background: none;
-							width: 100%!important;
+
+							&::before {
+								pointer-events: none;
+								content: "";
+								width: 16px;
+								height: 16px;
+								@include mx.icon_close_circle('707070');
+								position: absolute;
+								left: 0;
+								top: 50%;
+								transform: translateY(-50%);
+								z-index: 2;
+							}
 						}
 					}
+
+					input[type="button"] {
+						cursor: pointer;
+						color: #004098;
+						@include mx.fs(14);
+						border: none;
+						background: none;
+						width: 100% !important;
+					}
+				}
 			}
-			&__post{
+
+			&__post {
+				padding: 0;
 				display: grid;
-				grid-template-columns: 1fr 1fr;
+				grid-template-columns: 1fr 1fr 1fr;
 				grid-template-rows: 1fr;
-				gap: 10px;
-				icon{
+				gap: 0px;
+				@include mx.max_w(1400){
+					display: grid;
+					grid-template-columns: 1fr 1.5fr 1fr;
+				}
+				@include mx.max_w(1280){
+					grid-template-columns: 1fr;
+					grid-template-rows: auto;
+				}
+				icon {
 					color: #ccc;
+				}
+				.post {
+					padding: 20px;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					position: relative;
+					h4{
+						width: fit-content;
+					}
+					>div{
+						display: flex;
+						flex-direction: column;
+						gap: 10px;
+					}
+					&::after{
+						content: "";
+						width: 3px;
+						height: calc(100% - 20px) ;
+						position: absolute;
+						right: 0;
+						top:50%;
+						transform: translateY(-50%);
+						background: #EFF7F4;
+						@include mx.max_w(1280){
+							height: 3px;
+							width: calc(100% - 20px) ;
+							right: auto;
+							left:50%;
+							top:auto;
+							transform: translateX(-50%);
+							bottom: 0;
+						}
+					}
+					&:last-child{
+						&::after{
+							display: none;
+						}
+					}
+					&--status {
+						.chk {
+							display: flex;
+							align-items: center;
+							flex-wrap: wrap;
+							gap: 10px;
+						}
+
+					}
+
+					&--date {
+						&__ymd {
+							display: flex;
+							align-items: center;
+							gap: 10px;
+
+							>div {
+								
+								input {
+									border: none;
+								}
+								border: solid 1px #707070;
+								display: grid;
+								grid-template-columns: 1.5fr 1fr 1fr;
+
+							}
+						}
+
+						&__time {
+							display: flex;
+							align-items: center;
+							flex-wrap: wrap;
+							gap: 8px;
+							input[type="number"]{
+								padding: 2px 5px;
+							}
+							input[type="number"]::-webkit-outer-spin-button,
+							input[type="number"]::-webkit-inner-spin-button {
+								
+								-webkit-appearance: none;
+								margin: 0;
+								-moz-appearance: textfield;
+							}
+						}
+						
+					}
+					&--auther{
+						
+							>div{
+								
+								
+							}
+						}
 				}
 			}
 		}
