--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -1,34 +1,49 @@
 @use "_mixin.scss" as mx;
 
-
-
 #wrap {
 	width: 100%;
-	overflow: clip;
+
 }
 
 #page {
+	overflow: clip;
+
 	.site-main {
 		display: grid;
 		grid-template-columns: 250px 1fr;
 		grid-template-rows: auto;
+		margin-top: 140px;
+
+		&.hide-navi {
+			#view {
+				grid-row: 1;
+				grid-column: 1 / span 2;
+			}
+		}
 
 		#view {
-			margin: 0;
+			margin: -40px 0 0 0;
 			float: none;
 			width: 100%;
 			min-height: 100vh;
 
 			.site-contents {
+				margin-top: 0px;
 				display: grid;
 				grid-template-columns: 1fr 250px;
 				grid-template-rows: auto 1fr;
+
+				&.hide-right {
+					.postinfo {
+						grid-column: 1 / span 2;
+					}
+				}
 
 				h2 {
 					grid-column: 1;
 					grid-row: 1;
 					background: none;
-					padding: 40px 30px 20px;
+					padding: 40px 40px 20px;
 					border-bottom: none;
 					color: #009B63;
 					@include mx.fs(28);
@@ -69,21 +84,60 @@
 					width: 100%;
 					background: #D4EBE3;
 					color: #888888;
-					button{
+					padding-top: 52px;
+					position: relative;
+
+					&.hide {
+						right: -250px;
+					}
+
+					.toggle-genre1 {
+						width: 250px;
+						right: 0;
+						top: 100px;
+						z-index: 10;
+						position: fixed;
+						gap: 5px;
+						display: flex;
+						align-items: center;
+						background: #D4EBE3;
+						text-align: left;
+						@include mx.hover{
+							background: #c1e6d9;
+						}
+						&.close {
+							height: 40px;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							padding: 0px 1em;
+							width: 40px;
+
+							.text {
+								display: none;
+							}
+						}
+					}
+
+					button {
 						color: #888888;
 						padding: 10px 1em;
 					}
-					.genre1{
-						>ul{
-							>li{
-								
-								>label{
+
+					.genre1 {
+						>ul {
+							>li {
+
+								>label {
 									padding: 5px 0.5em 5px 1em;
 								}
-								>ul{
-									background: rgba(240,240,240,0.5);
-									li{
-										>label{
+
+								>ul {
+									display: none;
+									background: rgba(240, 240, 240, 0.5);
+
+									li {
+										>label {
 											padding: 3px 0.5em 3px 2em;
 										}
 									}
@@ -98,7 +152,7 @@
 	}
 
 	.content {
-		
+
 		&--box {
 			background: #fff;
 			padding: 20px;
@@ -231,55 +285,65 @@
 				grid-template-columns: 1fr 1fr 1fr;
 				grid-template-rows: 1fr;
 				gap: 0px;
-				@include mx.max_w(1400){
+
+				@include mx.max_w(1400) {
 					display: grid;
 					grid-template-columns: 1fr 1.5fr 1fr;
 				}
-				@include mx.max_w(1280){
+
+				@include mx.max_w(1280) {
 					grid-template-columns: 1fr;
 					grid-template-rows: auto;
 				}
+
 				icon {
 					color: #ccc;
 				}
+
 				.post {
 					padding: 20px;
 					display: flex;
 					flex-direction: column;
 					align-items: center;
 					position: relative;
-					h4{
+
+					h4 {
 						width: fit-content;
 					}
-					>div{
+
+					>div {
 						display: flex;
 						flex-direction: column;
 						gap: 10px;
 					}
-					&::after{
+
+					&::after {
 						content: "";
 						width: 3px;
-						height: calc(100% - 20px) ;
+						height: calc(100% - 20px);
 						position: absolute;
 						right: 0;
-						top:50%;
+						top: 50%;
 						transform: translateY(-50%);
 						background: #EFF7F4;
-						@include mx.max_w(1280){
+
+						@include mx.max_w(1280) {
 							height: 3px;
-							width: calc(100% - 20px) ;
+							width: calc(100% - 20px);
 							right: auto;
-							left:50%;
-							top:auto;
+							left: 50%;
+							top: auto;
 							transform: translateX(-50%);
 							bottom: 0;
 						}
 					}
-					&:last-child{
-						&::after{
+
+					&:last-child {
+						&::after {
 							display: none;
 						}
 					}
+
 					&--status {
 						.chk {
 							display: flex;
@@ -297,10 +361,11 @@
 							gap: 10px;
 
 							>div {
-								
+
 								input {
 									border: none;
 								}
+
 								border: solid 1px #707070;
 								display: grid;
 								grid-template-columns: 1.5fr 1fr 1fr;
@@ -313,26 +378,26 @@
 							align-items: center;
 							flex-wrap: wrap;
 							gap: 8px;
-							input[type="number"]{
+
+							input[type="number"] {
 								padding: 2px 5px;
 							}
+
 							input[type="number"]::-webkit-outer-spin-button,
 							input[type="number"]::-webkit-inner-spin-button {
-								
+
 								-webkit-appearance: none;
 								margin: 0;
 								-moz-appearance: textfield;
 							}
 						}
-						
+
 					}
-					&--auther{
-						
-							>div{
-								
-								
-							}
-						}
+
+					&--auther {
+
+						>div {}
+					}
 				}
 			}
 		}
