--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -258,7 +258,7 @@
 								content: "";
 								width: 16px;
 								height: 16px;
-								@include mx.icon_close_circle('707070');
+								@include mx.icon_close_circle('ccc');
 								position: absolute;
 								left: 0;
 								top: 50%;
