--- a/admin/css/style_02.css
+++ b/admin/css/style_02.css
@@ -1950,7 +1950,7 @@ label {
   grid-column: 1/span 2;
 }
 #page .site-main #view {
-  margin: -40px 0 0 0;
+  margin: 0px 0 0 0;
   float: none;
   width: 100%;
   min-height: 100vh;
@@ -1991,7 +1991,7 @@ label {
   -ms-grid-row: 1;
   grid-row: 1;
   background: none;
-  padding: 40px 40px 20px;
+  padding: 0px 40px 20px;
   border-bottom: none;
   color: #009B63;
   font-size: 1.75rem;
@@ -2035,11 +2035,13 @@ label {
   width: 100%;
   background: #D4EBE3;
   color: #888888;
-  padding-top: 52px;
   position: relative;
 }
 #page .site-main #view .site-contents .right .genre1 {
   background: #D4EBE3;
+}
+#page .site-main #view .site-contents .right .genre1 #blog {
+  padding: 20px 0;
 }
 #page .site-main #view .site-contents .right.hide {
   background: transparent;
