--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -22,7 +22,7 @@
 		}
 
 		#view {
-			margin: -40px 0 0 0;
+			margin: 0px 0 0 0;
 			float: none;
 			width: 100%;
 			min-height: 100vh;
@@ -43,7 +43,7 @@
 					grid-column: 1;
 					grid-row: 1;
 					background: none;
-					padding: 40px 40px 20px;
+					padding: 0px 40px 20px;
 					border-bottom: none;
 					color: #009B63;
 					@include mx.fs(28);
@@ -71,7 +71,6 @@
 					float: none;
 					width: 100%;
 					padding: 0 40px 40px;
-
 					span {
 						padding: 0;
 					}
@@ -84,10 +83,12 @@
 					width: 100%;
 					background: #D4EBE3;
 					color: #888888;
-					padding-top: 52px;
 					position: relative;
 					.genre1{
 						background: #D4EBE3;
+						#blog{
+							padding: 20px 0;
+						}
 					}
 					&.hide {
 						background: transparent;
